--- a/project.yml
+++ b/project.yml
@@ -9,4 +9,5 @@ sourceSystems:
   - id: '99834cb6-44e7-406e-9741-a32b09fe76d7'
     name: 'source'
     description: ''
+    activeDiscovery: '3dc26cee-f794-42b3-a94b-5266b032176e'
     sourceSystemTypeId: '301305db-47c8-4d20-b2b2-5dbefbaf251d'
